# flake-templates

./: README.md  flake.nix
guile-http/: flake.nix
guile-http/src/: main.scm
js-web/: flake.nix  index.html  main.js  styles.css
love2d/: flake.nix
node-dev/: flake.nix
org-website/: .gitignore  README.org  build-site.el  flake.nix
org-website/.github/workflows/: deploy.yaml
org-website/assets/: base.css  style-overrides.css
python-fastapi/: .gitignore  Dockerfile  flake.nix  requirements.txt
python-fastapi/app/: main.py
rust-bin/: Cargo.toml  flake.nix
rust-dev/: .gitignore  flake.nix
rust-dev-env/: Cargo.toml  flake.nix
rust-wasm-lib/: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
rust-wasm-lib/src/: lib.rs
rust-workspace/: flake.nix  rust-toolchain.toml
typescript-fastify/: .gitignore  Dockerfile  flake.nix  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
typescript-fastify/src/: index.ts  server.test.ts  server.ts
zig-bin/: .gitignore  flake.nix
zig-bin/src/: main.zig
