[package]
name = "wasm_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[profile.release]
# Optimize wasm bundle for size
# - https://doc.rust-lang.org/cargo/reference/profiles.html
# - https://rustwasm.github.io/docs/book/reference/code-size.html
lto = true
opt-level = "z"
strip = "debuginfo"
